--- a/index.html
+++ b/index.html
@@ -17,18 +17,20 @@
       </nav>
   
 <!--  pozycjonowanie     -->
-   <div id="kontener">
-       <div id="kont_1">
-           <p>pozycjonowany pierwszy</p>
+<div id="kontener">
+    <div id="kont_1">
+        <p>pozycjonowany pierwszy</p>
+    </div>
+
+    <div id="kont_2">
+        <p>pozycjonowany drugi</p>
+    </div>
+        <div id="kont_3">
+            <p>pozycjonowany trzeci</p>
+        </div>
+        <div id="kont_4">
+            <p>pozycjonowany cztery</p>
        </div>
-       
-       <div id="kont_2">
-           <p>pozycjonowany drugi</p>
-           
-            <div id="kont_3">
-           <p>pozycjonowany trzeci</p>
-       </div>
-       </div>
-   </div>
+</div>
 </body>
 </html>
